# sudoku-gui

./: CMakeLists.txt  GUI.cpp  GUI.h  README.md  Solver.cpp  Solver.h  State.cpp  State.h  build.sh  clean.sh  main.cpp  style.cpp  style.h
